<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="50dp"
    android:paddingRight="50dp" >
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scenario_edit_block_title"
        android:paddingTop="20sp"
        android:textColor="#48bdec"
        android:textSize="35sp"/>
        
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scenario_edit_block_object_title"
        android:textSize="25sp"
        android:layout_marginTop="30dp"/>
    
    <Spinner 
        android:id="@+id/scenario_edit_block_object_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"/>
    
    <Spinner 
        android:id="@+id/scenario_edit_block_action_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"/>    
    
    <Spinner 
        android:id="@+id/scenario_edit_block_param_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"/>
    
    <Button 
        android:id="@+id/scenario_edit_validation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scenario_edit_block_validation_button"
        android:layout_marginTop="20dp"/>
    
    <Button 
        android:id="@+id/scenario_edit_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scenario_edit_block_continue_button"
        android:layout_marginTop="10dp"/>

</LinearLayout>
