<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >
    
    <EditText
        android:id="@+id/login_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/password_edit"
        android:layout_alignLeft="@+id/password_edit"
        android:ems="11"
        android:hint="@string/login_placeholder"
        android:textSize="30sp" 
        android:paddingTop="30dp"/>
    
    <EditText
        android:id="@+id/password_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_button"
        android:layout_centerHorizontal="true"
        android:ems="11"
        android:hint="@string/password_placeholder"
        android:inputType="textPassword"
        android:textSize="30sp" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="245dp"
        android:layout_marginTop="30dp"
        android:text="@string/login_text_button"
        android:textSize="30sp" />

</RelativeLayout>