<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingTop="20dp"
    android:paddingRight="20dp" >
        
	    <TextView 
		    android:id="@+id/scenario_name"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:textColor="#48bdec"
		    android:textSize="30sp"/>
	    
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
	        
      	    <TextView
		        android:id="@+id/scenario_description"
		        android:layout_width="750dp"
		        android:layout_height="wrap_content" 
	            android:textColor="#8c8c8c"
	            android:textSize="20sp"/>
      	    
      	    <Button 
      	        android:id="@+id/download_button"
      	        android:layout_width="wrap_content"
      	        android:layout_height="wrap_content"
      	        android:text="@string/download_scenario"
				android:layout_marginLeft="20dp"
      	        android:layout_gravity="center"/>
      	    
	    </LinearLayout>

	    
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/scenario_declencheur_titre"
            android:textColor="#5f5f5f"
            android:textSize="25sp"
            android:layout_marginTop="20dp"/>
	    
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/trigger_object_title"
            android:textColor="#8c8c8c"
            android:textSize="25sp"
            android:layout_marginTop="10dp"/>
	    
	    <LinearLayout 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:layout_marginLeft="20dp">
	        
	        <TextView 
	            android:id="@+id/trigger_object_name"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
                android:paddingTop="10sp"
                android:textColor="#8c8c8c"
                android:textSize="20sp"/>
	        
	        <ImageView
                android:id="@+id/trigger_object_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10sp" />
	        
	    </LinearLayout>

	    <TextView
			android:id="@+id/scenario_block_param_title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingTop="10sp"
			android:text="@string/trigger_param_title"
			android:textColor="#8c8c8c"
			android:textSize="25sp"/>

      	<TextView
			android:id="@+id/trigger_param"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingLeft="20sp"
			android:paddingTop="10sp"
			android:textColor="#8c8c8c"
			android:textSize="20sp"/>
      	
      	<TextView 
      	    android:layout_width="wrap_content"
      	    android:layout_height="wrap_content"
      	    android:text="@string/scenario_actions_titre"
            android:textColor="#5f5f5f"
            android:textSize="25sp"
            android:layout_marginTop="20dp"/>
      	
        <ListView
            android:id="@+id/scenario_blocks_listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" 
            android:background="#e5e5e5"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>
            
</LinearLayout>
