<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ScenarioDetailsActivity" >



    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
	    <TextView
	        android:id="@+id/scenario_title"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:paddingLeft="70sp"
	        android:paddingTop="20sp"
	        android:textColor="#48bdec"
	        android:textSize="35sp" />
	    <ImageView
	        android:id="@+id/edit_name"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:paddingLeft="20dp"
	        android:src="@drawable/ic_action_edit"
	        android:paddingTop="28dp"/>
	</LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/scenario_description"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:maxLines="3"
            android:ellipsize="end"
            android:paddingLeft="70sp"
            android:paddingTop="20sp"
            android:textColor="#8c8c8c"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:orientation="vertical" >

            <Switch
                android:id="@+id/switch_activation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="40sp"
                android:text="@string/switch_activation"
                android:textColor="#5f5f5f"
                android:textSize="25sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10sp"
                android:paddingRight="10sp"
                android:text="@string/button_launch_scenario"
                android:textColor="#5f5f5f"
                android:textSize="20sp" />

        </LinearLayout>

	</LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingLeft="50sp"
        android:paddingRight="50sp"
        android:paddingTop="20sp"
        android:paddingBottom="20sp" >


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#e5e5e5"
            android:orientation="vertical" >
			
            <LinearLayout 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
	            <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="match_parent"
	                android:paddingLeft="20sp"
	                android:paddingTop="20sp"
	                android:text="@string/scenario_declencheur_titre"
	                android:textColor="#5f5f5f"
	                android:textSize="20sp" />
           	    <ImageView
           	        android:id="@+id/edit_trigger"
			        android:layout_width="wrap_content"
			        android:layout_height="match_parent"
			        android:paddingLeft="20dp"
			        android:src="@drawable/ic_action_edit"
			        android:paddingTop="12dp"/>
			</LinearLayout>

            <TextView
                android:id="@+id/scenario_block_object_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20sp"
                android:paddingTop="10sp"
                android:text="@string/trigger_object_title"
                android:textColor="#8c8c8c"
                android:textSize="25sp" >
            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="20sp"
                android:paddingTop="10sp" >
                <TextView
                    android:id="@+id/trigger_object_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingLeft="10sp"
                    android:paddingTop="7sp"
                    android:textColor="#8c8c8c"
                    android:textSize="20sp" >
                </TextView>
                <ImageView
                    android:id="@+id/trigger_object_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingLeft="10sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/scenario_block_param_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20sp"
                android:paddingTop="10sp"
                android:text="@string/trigger_param_title"
                android:textColor="#8c8c8c"
                android:textSize="25sp" >
            </TextView>

            <TextView
                android:id="@+id/trigger_param"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="30sp"
                android:paddingTop="10sp"
                android:paddingBottom="10sp"
                android:textColor="#8c8c8c"
                android:textSize="20sp" >
            </TextView>

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#b7b7b7"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" >

	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:background="#b7b7b7"
	            android:orientation="horizontal"
	            android:paddingLeft="20dp"
	            android:paddingRight="20dp" >
	            <TextView
	                android:layout_width="0dp"
	                android:layout_height="match_parent"
	                android:layout_weight="1"
	                android:gravity="center_horizontal|center_vertical"
	                android:text="@string/scenario_actions_titre"
	                android:textColor="#5f5f5f"
	                android:textSize="25sp"
	                android:paddingTop="20sp"
	                android:paddingBottom="20dp" />
	            <ImageView
	                android:id="@+id/scenario_add_block_button"
	                android:layout_width="0dp"
	                android:layout_height="match_parent"
	                android:layout_weight="1"
	                android:layout_gravity="center"
	                android:layout_marginTop="10sp"
	                android:background="#bebebe"
	                android:paddingBottom="20sp"
	                android:paddingTop="20sp"
	                android:src="@drawable/ic_action_new" />
	         </LinearLayout>

            <ListView
                android:id="@+id/scenario_blocks_listview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
		    <TextView
		        android:id="@+id/scenario_blocks_listview_empty"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>