<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ScenarioDetailsActivity" >



    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20sp">
	    <LinearLayout 
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:orientation="horizontal">
		    <TextView
		        android:id="@+id/scenario_title"
		        android:layout_width="0dp"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:paddingLeft="70sp"
		        android:gravity="left|center_vertical"
		        android:textColor="#48bdec"
		        android:textSize="35sp" />
		    <ImageView
		        android:id="@+id/edit_name"
		        android:layout_width="wrap_content"
		        android:layout_height="match_parent"
		        android:layout_gravity="center_vertical"
		        android:paddingRight="10sp"
		        android:src="@drawable/ic_action_edit"/>
		</LinearLayout>
	    <LinearLayout 
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:orientation="horizontal">
		    <TextView
		        android:id="@+id/blank_1"
		        android:layout_width="0dp"
		        android:layout_height="match_parent"
		        android:layout_weight="1" />
		    <Button
		        android:id="@+id/button_ok"
		       	android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:background="@color/button_OK"
                android:paddingTop="10sp"
                android:paddingBottom="10sp"
		        android:text="@string/OK"
		        android:layout_gravity="center_vertical|center_horizontal" />
		    <TextView
		        android:id="@+id/blank_2"
		        android:layout_width="0dp"
		        android:layout_height="match_parent"
		        android:layout_weight="1" />
		</LinearLayout>
	</LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20sp" >

        <TextView
            android:id="@+id/scenario_description"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:maxLines="3"
            android:ellipsize="end"
            android:paddingLeft="70sp"
            android:textColor="#8c8c8c"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <Switch
                android:id="@+id/switch_activation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10sp"
                android:text="@string/switch_activation"
                android:textColor="#5f5f5f"
                android:textSize="25sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10sp"
                android:paddingRight="10sp"
                android:text="@string/button_launch_scenario"
                android:textColor="#5f5f5f"
                android:textSize="20sp" />

        </LinearLayout>

	</LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingLeft="50sp"
        android:paddingRight="50sp"
        android:paddingTop="20sp"
        android:paddingBottom="20sp" >


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#e5e5e5"
            android:orientation="vertical" >
			
            <LinearLayout 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
            	android:layout_marginTop="10sp"
            	android:layout_marginBottom="10sp">
	            <TextView
	                android:layout_width="0dp"
	                android:layout_height="match_parent"
	                android:layout_weight="1"
	                android:paddingLeft="20sp"
	                android:gravity="center_vertical|left"
	                android:layout_gravity="center_vertical|left"
	                android:text="@string/scenario_declencheur_titre"
	                android:textColor="#5f5f5f"
	                android:textSize="25sp" />
           	    <ImageView
           	        android:id="@+id/edit_trigger"
			        android:layout_width="wrap_content"
			        android:layout_height="match_parent"
			       	android:layout_gravity="center_vertical"
		        	android:paddingRight="10sp"
					android:paddingTop="10sp"
					android:paddingBottom="10sp"
			        android:src="@drawable/ic_action_edit"/>
			</LinearLayout>

            <TextView
                android:id="@+id/scenario_block_object_title"
                android:layout_width="match_parent"
                android:layout_height="42sp"
                android:gravity="left|center_vertical"
                android:layout_gravity="left|center_vertical"
                android:paddingLeft="20sp"
                android:text="@string/trigger_object_title"
                android:textColor="#8c8c8c"
                android:textSize="25sp" >
            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="42sp"
                android:gravity="left|center_vertical"
                android:layout_gravity="left|center_vertical"
                android:paddingLeft="20sp" >
                <TextView
                    android:id="@+id/trigger_object_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingLeft="10sp"
                    android:paddingTop="7sp"
                    android:textColor="#8c8c8c"
                    android:textSize="20sp" >
                </TextView>
                <ImageView
                    android:id="@+id/trigger_object_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingLeft="10sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/scenario_block_param_title"
                android:layout_width="match_parent"
                android:layout_height="42sp"
                android:gravity="left|center_vertical"
                android:layout_gravity="left|center_vertical"
                android:paddingLeft="20sp"
                android:text="@string/trigger_param_title"
                android:textColor="#8c8c8c"
                android:textSize="25sp" >
            </TextView>

            <TextView
                android:id="@+id/trigger_param"
                android:layout_width="match_parent"
                android:layout_height="42sp"
                android:gravity="left|center_vertical"
                android:layout_gravity="left|center_vertical"
                android:paddingLeft="30sp"
                android:textColor="#8c8c8c"
                android:textSize="20sp" >
            </TextView>

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#b7b7b7"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" >

	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:background="#b7b7b7"
	            android:orientation="horizontal"
	            android:layout_marginTop="10sp"
	            android:layout_marginBottom="10sp" >
	            <TextView
	                android:layout_width="0dp"
	                android:layout_height="match_parent"
	                android:layout_weight="2"
	                android:gravity="left|center_vertical"
	                android:text="@string/scenario_actions_titre"
	                android:textColor="#5f5f5f"
	                android:textSize="25sp" />
		        <LinearLayout
		            android:layout_width="0dp"
		            android:layout_height="match_parent"
		           	android:layout_weight="3"
		            android:orientation="horizontal" >
		            <ImageView
		                android:id="@+id/scenario_add_block_button"
		                android:layout_width="wrap_content"
		                android:layout_height="match_parent"
		                android:layout_gravity="left|center_vertical"
		                android:gravity="center_vertical"
		        		android:background="@color/button_Add"
		                android:layout_marginRight="10sp"
		                android:paddingLeft="60sp"
		                android:paddingRight="60sp"
		                android:paddingTop="10sp"
		                android:paddingBottom="10sp"
		                android:src="@drawable/ic_action_new" />
		            <TextView
		                android:layout_width="0dp"
		                android:layout_height="match_parent"
		                android:layout_weight="1"/>
	            </LinearLayout>
         </LinearLayout>

            <ListView
                android:id="@+id/scenario_blocks_listview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
		    <TextView
		        android:id="@+id/scenario_blocks_listview_empty"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>